version 0.8-0

o hetcor() can optionally use parallel computations (suggestion of Marc Segond).

o polychor() and polyserial() now allow user-specified start values (suggestion of someone whose name is lost to antiquity, with my apologies).

version 0.7-10

o Let hetcor() work with objects that inherit from "data.frame" (suggestion of Emil O. W. Kirkegaard).

o Allow empty pairs when use="pairwise.complete.obs" for hetcor() (suggestion of Emil O. W. Kirkegaard).

o Allow character variables in hetcor() but print message.

version 0.7-9

o  Further protection/warnings against inadmissible correlations.

o  Protect against out-of-order thresholds during optimization (suggestion of Evgeny Mirkes).

o  hetcor() doesn't die when an error is thrown computing a correlation, which is now set to NA.

o  hetcor() now uses Matrix::nearPD() to force a postitive-definite result rather than the deprecated sfsmisc::nearcor() (suggestion of Timothy Bates).

o  Improved clarity of documentation.

o  See the CHANGES file for prior versions.