@@ -4,6 +4,8 @@ o hetcor() can optionally use parallel computations (suggestion of Marc Segond).
 
 o polychor() and polyserial() now allow user-specified start values (suggestion of someone whose name is lost to antiquity, with my apologies).
 
+o cases where correlations can't be computed (e.g., because a factor as only one level in the data) are handled more gracefully.
+
 version 0.7-10
 
 o Let hetcor() work with objects that inherit from "data.frame" (suggestion of Emil O. W. Kirkegaard).
